widget count: fix count alignment not centred

--- a/app/styles/components.css
+++ b/app/styles/components.css
@@ -127,7 +127,6 @@
 	border-radius: 50%;
 	box-shadow: 0 0.4em 0.5em 0 rgba(0, 0, 0, 0.25);
 	padding: 0.5em 0.9em;
-	vertical-align: middle;
 	margin: 0 0.5em;
 }
 
